--- a/src/views/layout/layout.njk
+++ b/src/views/layout/layout.njk
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
-    <style>
-    </style>
 </head>
 <body>
-    <div class="con">
-        <div>template</div>
-        <div>{{name}}</div>
-    </div>
+    {% include "./header.njk" %}
+
+    {% block main %} {% endblock %}
+
+    {% include "./footer.njk" %}
 </body>
 </html>
